src/plugins/platforms/cocoa/qcocoascreen.h
@@ -143,6 +143,10 @@ QDebug operator<<(QDebug debug, const QCocoaScreen *screen);
 QT_END_NAMESPACE
 
 #if defined(__OBJC__)
+
+// @compatibility_alias doesn't work with categories or their methods
+#define qt_displayId QT_MANGLE_NAMESPACE(qt_displayId)
+
 @interface NSScreen (QtExtras)
 @property(readonly) CGDirectDisplayID qt_displayId;
 @end
